--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Test Repo</title>
+   <title>Test Repo 1</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+   <section>
+      <h2>Test Heading 1</h2>
+   </section>
 </body>
 </html>
